<?xml version="1.0"?>
<package format="2">
  <name>cblox_ros</name>
  <version>0.0.0</version>
  <description>
    Contains a ros interface for cblox.
  </description>
  <url></url>
  <author>Alex Millane</author>
  <maintainer email="alex.millane@gmail.com">Alex Millane</maintainer>
  <license>New BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- Dependencies. -->
  <depend>cblox_msgs</depend>
  <depend>cblox</depend>
  <depend>cmake_modules</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr_conversions</depend>
  <depend>minkindr</depend>
  <depend>roscpp</depend>
  <depend>voxblox_msgs</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox</depend>

</package>
